# ml-sicheng

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/datasets/: new-energy-plant.md
docs/notes/: main.typ  style.typ
notebook/: base.ipynb  iris分类.ipynb  小波变换.ipynb  数据可视化.ipynb  数据处理与接口.ipynb
notebook/linear/: kernel-metadata.json  linear_exercise.ipynb  linear_tutorial.ipynb
notebook/lstm/: kernel-metadata.json  lstm-new-energy-plant.ipynb
notebook/ml-sicheng-test/: kernel-metadata.json  test_kaggle.ipynb
output/model/: Solar-lstm-regression.keras  WindPower-lstm-regression.keras  WindVelocity-lstm-regression.keras
scripts/: prepare_dataset.py  release.py  release_dev.py  tidy_dataset.py
src/ml_sicheng/: __init__.py
src/ml_sicheng/kaggle/: __init__.py
src/ml_sicheng/kaggle/tests/: test_base.py
src/ml_sicheng/models/: vae.py
src/ml_sicheng/models/tests/: test_simple_lstm.py  test_vae.py
src/ml_sicheng/new_energy_plant/: __init__.py  dataset.py
src/ml_sicheng/new_energy_plant/tests/: test_base.py
src/ml_sicheng/plot/: __init__.py
src/ml_sicheng/plot/tests/: test_base.py
src/mylib/: __init__.py  plot.py
src/mylib/datasets/: __init__.py
src/mylib/datasets/tests/: test_base.py
src/mylib/kaggle/tests/: test_base.py
src/mylib/models/: lstm.py  vae.py
src/mylib/models/tests/: test_simple_lstm.py  test_vae.py
src/mylib/new_energy_plant/: __init__.py  dataset.py  transformer.py
src/mylib/new_energy_plant/tests/: test_base.py
src/mylib/plot/: __init__.py
src/mylib/plot/tests/: test_base.py
src/mylib/transformer/: __init__.py
src/mylib/transformer/tests/: test_base.py
tests/: test_plot.py
