[project]
name = "mylib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sicheng1806", email = "sicheng1806@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pywavelets",
    "scikit-learn",
    "jax",
    "keras"
]

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
]
dev = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "seaborn",
]

# tool

[tool.uv]
default-groups = ["dev","notebook",]

[tool.uv.workspace]
exclude = ["mylib/datasets.data/*.csv.gz"]

[tool.pytest.ini_options]
addopts = "-s"
