[project]
name = "ml-sicheng"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sicheng1806", email = "sicheng1806@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pywavelets",
    "scikit-learn",
    "keras",
    "kagglehub",
]

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
dev = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "seaborn",
    "jax",
]

# uv 

[tool.uv]
default-groups = ["dev","notebook"]
publish-url = "https://test.pypi.org/legacy/"

[[tool.uv.index]]
name = "tuna-mirror"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
explicit = true

# pytest

[tool.pytest.ini_options]
addopts = "-s"

# ruff 

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]