[project]
name = "ml-sicheng"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sicheng1806", email = "sicheng1806@outlook.com" }
]
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = ["matplotlib",
    "numpy",
    "pandas",
    "pywavelets",
    "scikit-learn",
    "keras",
    "kagglehub",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
dev = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "seaborn",
    "jax",
]

[project.scripts]

######################################
##             Build                ##
######################################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ml_sicheng/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/ml_sicheng",
    "/pyproject.toml",
    "/README.md"
]

######################################
##             Tools                ##
######################################

[tool.uv]
default-groups = ["dev","notebook"]
publish-url = "https://test.pypi.org/legacy/"

[[tool.uv.index]]
name = "tuna-mirror"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
explicit = true

[tool.pytest.ini_options]
addopts = "-s"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
